--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body>
   <div class="testimonials">
     <div class="testimonial1">
-      <img src="./images/image-daniel.jpg" alt="Daniel Clifford">
-    
-
-      <h4>Daniel Clifford</h4>
-      <p class="verified">Verified Graduate</p>
+      <div class="photo-and-name">
+        <img src="./images/image-daniel.jpg" alt="Daniel Clifford">
+        <div class="name">
+          <h4>Daniel Clifford</h4>
+          <p class="verified">Verified Graduate</p>
+        </div>
+      </div>
       <h3>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
         in the company I joined. I honestly feel I got every penny’s worth.
       </h3>
@@ -29,9 +31,13 @@
     </div>
 
     <div class="testimonial2">
-      <img src="./images/image-jonathan.jpg" alt="Jonathan Walters">
-      <h4>Jonathan Walters</h4>
-      <p class="verified">Verified Graduate</p>
+      <div class="photo-and-name">
+        <img src="./images/image-jonathan.jpg" alt="Jonathan Walters">
+        <div class="name">
+          <h4>Jonathan Walters</h4>
+          <p class="verified">Verified Graduate</p>
+        </div>
+      </div>
 
       <h3>The team was very supportive and kept me motivated</h3>
 
@@ -41,9 +47,13 @@
     </div>
 
     <div class="testimonial3">
-      <img src="./images/image-kira.jpg" alt="Kira Whittle">
-      <h4>Kira Whittle</h4>
-      <p class="verified">Verified Graduate</p>
+      <div class="photo-and-name">
+        <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon">
+        <div class="name">
+          <h4>Jeanette Harmon</h4>
+          <p class="verified">Verified Graduate</p>
+        </div>
+      </div>
 
       <h3>Such a life-changing experience. Highly recommended!</h3>
       <p>“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
@@ -56,9 +66,13 @@
     </div>
 
     <div class="testimonial4">
-      <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon">
-      <h4>Jeanette Harmon</h4>
-      <p class="verified">Verified Graduate</p>
+      <div class="photo-and-name">
+        <img src="./images/image-patrick.jpg" alt="Kira Whittle">
+        <div class="name">
+          <h4>Kira Whittle</h4>
+          <p class="verified">Verified Graduate</p>
+        </div>
+      </div>
 
       <h3>An overall wonderful and rewarding experience</h3>
 
@@ -67,9 +81,14 @@
     </div>
 
     <div class="testimonial5">
-      <img src="./images/image-patrick.jpg" alt="Patrick Abrams">
-      <h4>Patrick Abrams</h4>
-      <p class="verified">Verified Graduate</p>
+      <div class="photo-and-name">
+        <img src="./images/image-patrick.jpg" alt="Patrick Abrams">
+        <div class="name">
+          <h4>Patrick Abrams</h4>
+          <p class="verified">Verified Graduate</p>
+        </div>
+
+      </div>
 
       <h3>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them
       and learning from their experiences was easy.</h3>
